vlib/v/checker/tests/unknown_as_type.out
x.v:7:9: error: unknown type `Stringg`
    5 |
    6 | fn foo(e Expr) {
    7 |     x := e as Stringg
      |            ~~
    8 |     println(x)
    9 | }
